# steps_bot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  dockerfile  pyproject.toml
app/admin/admin/: settings.py
app/admin/core/: admin.py  apps.py  fields.py  models.py
app/steps_bot/: dispatcher.py  main.py  polling.py  settings.py
app/steps_bot/api/: __init__.py  admin.py
app/steps_bot/db/: models.py  repo.py  session.py  utils.py
app/steps_bot/handlers/: admin_tools.py  back.py  balance.py  buy.py  catalog.py  dog_walk.py  end_walk.py  family.py  faq.py  history.py  live_location.py  location.py  promo.py  referral.py  rolldog_walk.py  roller_walk.py  start.py  walk.py
app/steps_bot/presentation/: commands.py
app/steps_bot/services/: broadcast_service.py  buy_service.py  captions_service.py  catalog_service.py  cdek_client.py  cdek_errors.py  coefficients_service.py  family_service.py  faq_service.py  ledger_service.py  promo_service.py  referral_service.py  registration_sevice.py  settings_service.py  (+6 more)
migrations/: env.py
migrations/versions/: 133cbbb92e00_add_media_file_to_contents.py  13b296824c97_add_promo_tables.py  3773100f0eb9_add_bot_setiings_table.py  4875c0abfa54_add_ledger_entries.py  5f2d3e1addb4_add_broadcasts.py  a1b2c3d4e5f6_add_referrals.py  a670709de944_add_defalult_for_users_updated_at.py  b1c2d3e4f5g6_add_pvz_table.py  c1d2e3f4g5h6_update_orders_replace_cdek_with_pvz.py  d64d40a7585b_init.py  d7e8f9g0h1i2_add_recipient_names_to_order.py  e303faa8a265_initial_schema.py  e8f9g0h1i2j3_add_product_code_to_products.py
(+33 files in other folders)
