[tool.poetry]
name = "steps-bot"
version = "0.1.0"
description = "Telegram bot for step tracking"
authors = ["Elisey <yeelisey@gmail.com>"]
readme = "README.md"
packages = [{include = "steps_bot", from = "app"}]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic-settings = ">=2.9.1,<3.0.0"
aiogram = ">=3.20.0.post0,<4.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
alembic = ">=1.16.2,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
django = ">=5.2.3,<6.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
aiosmtplib = ">=4.0.1,<5.0.0"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
